// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// USERS (local profile data, authentication handled by a separate service)
Table users {
  id integer [primary key, note: 'User ID from auth service (positive INT; CHECK > 0)']
  username varchar(32) [not null, unique]
  avatar varchar(2048) [note: 'Public URL to avatar file in object storage/CDN']
  status varchar(16) [note: 'online | offline (visible only to mutual followers)']
  role varchar(16) [not null, note: 'admin | user | guest']
  last_seen_at timestamptz [default: `now()`]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`, note: 'Used to detect profile changes or reset cache']
}

// FOLLOWERS
Table followers {
  user_id integer [not null, note: 'User who follows']
  followed_id integer [not null, note: 'User being followed']
  created_at timestamptz [default: `now()`]

  primary key (user_id, followed_id)

  /*
  -- 1. Duplicates restriction
CREATE UNIQUE INDEX uniq_follow
ON followers (user_id, followed_id);

-- 2. Indexes for fast search
CREATE INDEX idx_following
ON followers (user_id);

-- 3. -||- as 2nd
CREATE INDEX idx_followers
ON followers (followed_id);
  */
  
  // Note: mutual following is treated as a "friend" relationship
}

// RECIPES
Table recipes {
  id integer [primary key, increment]
  title jsonb [not null, note: 'Localized JSON: {en, fi, ru}']
  description jsonb [note: 'Localized JSON or null: {en, fi, ru}']
  instructions jsonb [not null, note: 'Localized steps JSON: {en:[...], fi:[...], ru:[...]}']
  servings integer [not null, default: 1, note: 'Number of servings']
  spiciness smallint [note: '0 = none, 1 = mild, 2 = medium, 3 = hot; CHECK 0..3']
  author_id integer [null, note: 'Reference to users.id (auth service user ID)']
  status varchar(16) [note: 'draft | moderation | published | archived; CHECK']

  rating_avg numeric(3,2) [note: 'Average rating (1.0–5.0); CHECK 1.00–5.00']
  rating_count integer [default: 0, note: 'Total number of ratings; CHECK >= 0']

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// INGREDIENTS
Table ingredients {
  id integer [primary key, increment]
  name varchar [not null, unique]
  created_at timestamptz [default: `now()`]
}

// RECIPE ↔ INGREDIENTS (join table)
Table recipe_ingredients {
  recipe_id integer [not null]
  ingredient_id integer [not null]
  amount numeric [note: 'Ingredient amount']
  unit varchar(16) [not null]

  primary key (recipe_id, ingredient_id)
}


// RECIPE CATEGORY TYPES
Table recipe_category_types {
  id integer [primary key, increment]
  code varchar [not null, unique, note: 'meal_time, dish_type, main_ingredient, cuisine']
  name varchar [not null]
  created_at timestamptz [default: `now()`]
}

/*
meal_time → Breakfast / Lunch / Dinner
dish_type → Dessert / Soup / Beverage
main_ingredient → Poultry / Beef / Fish
cuisine → Italian / Asian
*/

// RECIPE CATEGORIES (OF PARTICULAR TYPE)
Table recipe_categories {
  id integer [primary key, increment]
  category_type_id integer [not null]
  code varchar [not null]
  created_at timestamptz [default: `now()`]

  indexes {
    (category_type_id, code) [unique]
  }
}

// RECIPE ↔ CATEGORY (many-to-many)
Table recipe_category_map {
  recipe_id integer [not null]
  category_id integer [not null]

  primary key (recipe_id, category_id)
}


// INGREDIENT CATEGORIES
Table ingredient_categories {
  id integer [primary key, increment]
  code varchar [not null, unique, note: 'nuts, dairy, meat, fish, grains, spices']
  //think about enums
  created_at timestamptz [default: `now()`]
}

//INGREDIENT ↔ CATEGORY (many-to-many, e.g. peanut is a nut and legumes)
Table ingredient_category_correspondence { //mapping
  ingredient_id integer [not null]
  category_id integer [not null]

  primary key (ingredient_id, category_id)
}

//ALLERGENS
Table allergens {
  id integer [primary key, increment]
  code varchar [not null, unique, note: 'nuts, lactose, gluten, eggs']
  created_at timestamptz [default: `now()`]
}

//ALLERGEN ↔ CATEGORIES OF INGREDIENTS
Table allergen_categories {
  allergen_id integer [not null]
  category_id integer [not null]

  primary key (allergen_id, category_id)
}

//USER ↔ ALLERGIES
Table user_allergens {
  user_id integer [not null]
  allergen_id integer [not null]
  created_at timestamptz [default: `now()`]

  primary key (user_id, allergen_id)
}

//DIETS
Table diets {
  id integer [primary key, increment]
  code varchar [not null, unique, note: 'vegan, vegetarian']
  name varchar [not null]
  created_at timestamptz [default: `now()`]
}

//DIET ↔ CATEGORY OF INGREDIENTS
Table diet_restricted_categories {
  diet_id integer [not null]
  category_id integer [not null]

  primary key (diet_id, category_id)
}

//USER ↔ DIETS
Table user_diets {
  user_id integer [not null]
  diet_id integer [not null]
  created_at timestamptz [default: `now()`]

  primary key (user_id, diet_id)
}

//ALL UNITS (FROM PHYSICS AND PORTION UNITS)
Table units {
  code varchar(16) [primary key, note: 'g, ml, tbsp, pcs, slice']
  kind varchar(16) [not null, note: 'mass | volume | portion']
}

//UNITS TO GRAMS (only units.kind = 'portion' are allowed)
Table ingredient_unit_conversions {
  ingredient_id integer [not null]
  unit varchar(16) [not null]
  
  grams numeric [not null, note: 'Weight of 1 unit for this ingredient; CHECK > 0']

  primary key (ingredient_id, unit)
}

//NUTRITION
Table nutrition_facts {
  ingredient_id integer [primary key, note: 'FK → ingredients.id']

  calories numeric [not null, note: 'kcal per 100g or 100ml']
  protein  numeric [not null, note: 'grams per 100g/ml']
  fat      numeric [not null]
  carbs    numeric [not null]

  base_unit varchar(16) [not null]

  created_at timestamptz [default: `now()`]
}

//WEIGHTS
Table ingredient_portions {
  id integer [primary key]
  ingredient_id integer [not null]

  name varchar [not null, note: '1 avocado | 1 piece of rye bread']
  weight_in_grams numeric [not null, note: 'Approximate weight']

  created_at timestamptz [default: `now()`]

  indexes {
    (ingredient_id, name) [unique]
  }
}


// FAVORITE RECIPES
Table favorites {
  user_id integer [not null]
  recipe_id integer [not null]
  created_at timestamptz [default: `now()`]

  primary key (user_id, recipe_id)
}

// RECIPE SHARES (reposts)
Table recipe_shares {
  user_id integer [not null, note: 'User who shared the recipe']
  recipe_id integer [not null]
  created_at timestamptz [default: `now()`]

  primary key (user_id, recipe_id)
}


//URL of the pic/video

// MEDIA RESOURCES
Table recipe_media {
  id integer [primary key, increment]
  recipe_id integer [not null]
  type varchar [not null, note: 'image | video']
  url varchar [not null]
  position integer [not null, note: 'order of pics in one recipe; CHECK >= 0']
  created_at timestamptz [default: `now()`]

  indexes {
    (recipe_id, position) [unique]
  }
}

/*
CDN!

user chooses file, 
frontend 
POST /media/upload-url
PUT https://s3.amazonaws.com/...
backend saves
{
  "recipe_id": 42,
  "type": "image",
  "url": "https://cdn.example.com/recipes/42/main.webp"
}
page has
<img src="https://cdn.example.com/recipes/42/main.webp" />

*/

// REVIEWS (flat, no replies)
Table recipe_reviews {
  id integer [primary key, increment]
  recipe_id integer [not null]
  author_id integer [null, note: 'users.id']
  body text [not null]
  is_deleted boolean [not null, default: false, note: 'Soft delete flag for reviews']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    (recipe_id, created_at)
  }
}

// RECIPE RATINGS (user → recipe)
Table recipe_ratings {
  user_id integer [not null, note: 'User who rated the recipe']
  recipe_id integer [not null]
  rating smallint [not null, note: '1–5 stars; CHECK 1..5']

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  primary key (user_id, recipe_id)
}

// RELATIONS
Ref: recipes.author_id > users.id [delete: set null]
Ref: recipe_ingredients.recipe_id > recipes.id [delete: cascade]
Ref: recipe_ingredients.ingredient_id > ingredients.id
Ref: recipe_ingredients.unit > units.code
Ref: followers.user_id > users.id [delete: cascade]
Ref: followers.followed_id > users.id [delete: cascade]
Ref: recipe_categories.category_type_id > recipe_category_types.id
Ref: recipe_category_map.recipe_id > recipes.id [delete: cascade]
Ref: recipe_category_map.category_id > recipe_categories.id
Ref: ingredient_category_correspondence.ingredient_id > ingredients.id
Ref: ingredient_category_correspondence.category_id > ingredient_categories.id
Ref: allergen_categories.allergen_id > allergens.id
Ref: allergen_categories.category_id > ingredient_categories.id
Ref: user_allergens.user_id > users.id [delete: cascade]
Ref: user_allergens.allergen_id > allergens.id
Ref: diet_restricted_categories.diet_id > diets.id
Ref: diet_restricted_categories.category_id > ingredient_categories.id
Ref: user_diets.user_id > users.id [delete: cascade]
Ref: user_diets.diet_id > diets.id
Ref: ingredient_unit_conversions.ingredient_id > ingredients.id
Ref: ingredient_unit_conversions.unit > units.code
Ref: nutrition_facts.ingredient_id > ingredients.id
Ref: nutrition_facts.base_unit > units.code
Ref: ingredient_portions.ingredient_id > ingredients.id
Ref: favorites.user_id > users.id [delete: cascade]
Ref: favorites.recipe_id > recipes.id [delete: cascade]
Ref: recipe_shares.user_id > users.id [delete: cascade]
Ref: recipe_shares.recipe_id > recipes.id [delete: cascade]
Ref: recipe_media.recipe_id > recipes.id [delete: cascade]
Ref: recipe_reviews.recipe_id > recipes.id [delete: cascade]
Ref: recipe_reviews.author_id > users.id [delete: set null]
Ref: recipe_ratings.user_id > users.id [delete: cascade]
Ref: recipe_ratings.recipe_id > recipes.id [delete: cascade]
